--- a/consulado_app/public/css/intro-user.css
+++ b/consulado_app/public/css/intro-user.css
@@ -48,7 +48,7 @@ label{
     border: none;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
-    color: white;
+    color: rgb(35, 35, 35);
     font-size: 1.2rem;
 }
 
