--- a/consulado_app/views/formBack.ejs
+++ b/consulado_app/views/formBack.ejs
@@ -50,7 +50,7 @@
                     </div>
                     <div class="insert">
                         <label for="fin-dni">Caducidad DNI</label>
-                        <input type="text" name="finDni" id="fin-dni">
+                        <input type="date" name="finDni" id="fin-dni">
                     </div>
                     <div class="insert">
                         <label for="pasaporte">Pasaporte</label>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="insert">
                         <label for="fin-psp">Caducidad pasaporte:</label>
-                        <input type="text" name="finPsp" id="fin-psp">
+                        <input type="date" name="finPsp" id="fin-psp">
                     </div>
                     <div class="insert">
                         <label for="password">Número secreto:</label>
