--- a/consulado_app/views/userList.ejs
+++ b/consulado_app/views/userList.ejs
@@ -21,9 +21,9 @@
                         <th>Apellido</th>
                         <th>Email</th>
                         <th>DNI</th>
-                        <th>Caducidad DNI</th>
+                        <th data-type="date" data-format="MYSQL">Caducidad DNI</th>
                         <th>Pasaporte</th>
-                        <th>Caducidad Pasaporte</th>
+                        <th data-type="date" data-format="DD/MM/YYYY">Caducidad Pasaporte</th>
                     </tr>
                 </thead>
                 <tbody>
