--- a/consulado_app/views/parcials/footer.ejs
+++ b/consulado_app/views/parcials/footer.ejs
@@ -4,7 +4,7 @@
         <h3>SmartDate</h3>
     </div>
     <div class="legal">
-        <a href="#">Cokies</a>
+        <a href="#">Cookies</a>
         <a href="#">Avisos Legales</a>
         <a href="#">Privacidad</a>
     </div>
