--- a/consulado_app/public/css/formulario.css
+++ b/consulado_app/public/css/formulario.css
@@ -4,6 +4,17 @@ h2{
     margin-bottom: 2rem;
 }
 
+p.error{
+    margin: 0 auto;
+    max-width: 700px;
+    text-align: center;
+    border: 2px solid red;
+    color: red;
+    padding: .8rem;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
 main.login {
     margin: 0 auto;
 }
