--- a/consulado_app/views/loginRes.ejs
+++ b/consulado_app/views/loginRes.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include('./parcials/head') %>
-    <link rel="stylesheet" href="/css/formulario.css">
+        <link rel="stylesheet" href="/css/formulario.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 
     <main>
         <h2>Bienvenidos a la app de citas del consulado Italiano</h2>
-
+        <p class="<%= classError %>"><%= error %></p>
         <div class="form-log">
             <form action="#" method="post">
                 <h3>Iniciar Sesión</h3>
