--- a/consulado_app/views/mainUserAire.ejs
+++ b/consulado_app/views/mainUserAire.ejs
@@ -12,7 +12,10 @@
     </header>
 
     <main>
-        <h2>Bienvenido Usuario</h2>
+        <div class="log">
+            <h2>Bienvenido Usuario</h2>
+            <a href="#" class="logout">Cerrar Sessión</a>
+        </div>
         <div class="opciones">
             <a href="#">Programar cita Certificaciones</a>
             <a href="#">Progamar cita Urgente</a>
