--- a/consulado_app/public/css/formulario.css
+++ b/consulado_app/public/css/formulario.css
@@ -49,7 +49,7 @@ div.campo input{
     border: none;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 1.2rem;
 }
 
