--- a/consulado_app/views/parcials/footer.ejs
+++ b/consulado_app/views/parcials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class="logo">
-        <img class="mundo-f" src="img/travelling_2060521.png" alt="logo avion sobre globo terrestre">
+        <img class="mundo-f" src="/img/travelling_2060521.png" alt="logo avion sobre globo terrestre">
         <h3>SmartDate</h3>
     </div>
     <div class="legal">
