--- a/consulado_app/views/mainUserAire.ejs
+++ b/consulado_app/views/mainUserAire.ejs
@@ -18,7 +18,7 @@
         </div>
         <div class="opciones">
             <a href="#">Programar cita Certificaciones</a>
-            <a href="#">Progamar cita Urgente</a>
+            <a href="calendario/<%= user.id_residente %>">Progamar cita Urgente</a>
             <a href="user/<%= user.id_residente %>">Mis Datos</a>
         </div>
     </main>
