Actualizar bd - configurar mensajes dinamicamente

--- a/consulado_app_05/views/parcials/header.ejs
+++ b/consulado_app_05/views/parcials/header.ejs
@@ -18,7 +18,8 @@
     <div class="cuerpo-msg">
         <div class="message">
             <h2>Tus mensajes</h2>
-            <p>no hay mensajes</p>
+            <p><%= mensaje %></p>
+            <button class="cita">Propuesta de cita</button>
         </div>
         <div class="btn"><button class="cerrar-d" onclick="window.modal1.close();">Cerrar</button></div>
         
