--- a/consulado_app_05/public/css/style.css
+++ b/consulado_app_05/public/css/style.css
@@ -137,6 +137,7 @@ div.message {
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     background-color: rgb(198, 198, 198);
     padding: 1rem;
     margin-bottom: 1rem;
@@ -144,6 +145,21 @@ div.message {
 
 div.message h2 {
     margin-bottom: 1.5rem;
+    font-size: 2rem;
+}
+
+div.message p {
+    font-size: 1.2rem;
+}
+
+div.message button{
+    margin: 0 auto;
+    width: 80%;
+    font-size: 1.2rem;
+    padding: .5rem;
+    border-radius: 5px;
+    background-color: rgb(39, 39, 39);
+    color: white;
 }
 
 .btn,
