--- a/consulado_app_06/views/mainUserAire.ejs
+++ b/consulado_app_06/views/mainUserAire.ejs
@@ -14,7 +14,7 @@
     <main>
         <div class="log">
             <h2>Bienvenido <%= user.nombre_res %> <%= user.apellido_res %></h2>
-            <a href="#" class="logout">Cerrar Sessión</a>
+            <a href="/logout" class="logout">Cerrar Sessión</a>
         </div>
         <div class="opciones">
             <a href="calendario/<%= user.id_residente %>">Programar cita Certificaciones</a>
