--- a/consulado_app_06/views/parcials/header.ejs
+++ b/consulado_app_06/views/parcials/header.ejs
@@ -21,31 +21,49 @@
         <div class="message">
             <h2>Tus mensajes</h2>
             <p>
-                <%= mensaje %>
+                <!-- si no existe alerta -->
+                <% if (!mensaje) { %>
+                    No tienes ningún mensaje
+                    <% } else { %>
+                        <%= mensaje %>
+                            <% } %>
             </p>
+
             <button class="cita" onclick="window.modal2.showModal();">Propuesta de cita</button>
             <dialog id="modal2">
                 <div class="cuerpo-msg">
                     <div class="message">
-                        <h2>Propuesta de cita</h2>
-                        <p>Tienes una cita reservada para el:</p>
-                        <form action="#" method="post">
-                            <input type="hidden" value="">
-                            <input class="proposta" type="text" value="" placeholder="fecha cita" readonly>
+                        <% if (citas && citas.length> 0) { %>
+                            <h2>Reservas</h2>
                             <div class="adevertencias">
                                 <h3>¡IMPORTANTE!</h3>
-                            <p>Dale a confirmar para que la cita se agende correctamente.</p>
-                            <p>Si rechazas la cita no podremos garantizar una fecha que se adapte a la fecha de caducidad de tu documento.</p>
+                                <p>Dale a confirmar para que la cita se agende correctamente.</p>
+                                <p>Si rechazas la cita no podremos garantizar una fecha que se adapte a la fecha de
+                                    caducidad de tu documento.</p>
                             </div>
-                            
-                            <div class="btn-cita">
-                                <button type="submit">confirmar</button>
-                                <button type="submit">rechazar</button>
-                            </div>
-
-                        </form>
-                        <button class="cerrar-d" onclick="window.modal2.close();">Cerrar</button>
+                            <ul>
+                                <% citas.forEach(cita=> { %>
+                                    <li>
+                                        <p class="hora-cita">Renovación <%= cita.tipo_documento %> <br> en día y hora:
+                                                <%= new Date(cita.fecha_cita_res).toLocaleString('es-ES', {
+                                                    dateStyle: 'short' , timeStyle: 'short' }) %>
+                                        </p>
+                                        <form class="cita-auto" action="/aceptarCita/<%= cita.id_cita_res %>" method="POST">
+                                            <input type="hidden" name="user_id" value="<%= user.id_residente %>">
+                                            <button type="submit">Aceptar</button>
+                                        </form>
+                                        <form class="cita-auto" action="/rechazarCita/<%= cita.id_cita_res %>" method="POST">
+                                            <input type="hidden" name="user_id" value="<%= user.id_residente %>">
+                                            <button type="submit">Rechazar</button>
+                                        </form>
+                                    </li>
+                                    <% }); %>
+                            </ul>
+                            <% } else { %>
+                                <p>No tienes citas programadas.</p>
+                                <% } %>
                     </div>
+                    <button class="cerrar-d" onclick="window.modal2.close();">Cerrar</button>
                 </div>
             </dialog>
         </div>
