--- a/consulado_app_06/views/userDates.ejs
+++ b/consulado_app_06/views/userDates.ejs
@@ -12,6 +12,10 @@
     </header>
 
     <main>
+        <div class="log">
+            <h2>Bienvenido <%= user.nombre_res %> <%= user.apellido_res %></h2>
+            <a href="/logout" class="logout">Cerrar Sessión</a>
+        </div>
         <h2>Tus Datos</h2>
         <section>
             <table id="tabla">
