--- a/consulado_app_06/views/calendarioAuto.ejs
+++ b/consulado_app_06/views/calendarioAuto.ejs
@@ -12,6 +12,10 @@
     </header>
 
     <main>
+        <div class="log">
+            <h2>Bienvenido <%= user.nombre_res %> <%= user.apellido_res %></h2>
+            <a href="/logout" class="logout">Cerrar Sessión</a>
+        </div>
         <h2>Calendario Citas</h2>
         <div class="cale">
             <section>
