arreglar header backside

--- a/consulado_app_06/views/userList.ejs
+++ b/consulado_app_06/views/userList.ejs
@@ -3,12 +3,13 @@
 
 <head>
     <%- include('./parcials/head') %>
+    <link rel="stylesheet" href="/css/styleAdmin.css">
     <link rel="stylesheet" href="/css/main-back.css">
 </head>
 
 <body>
     <header>
-        <%- include('./parcials/header') %>
+        <%- include('./parcials/headerAdmin') %>
     </header>
 
     <main>
