--- a/consulado_app_06/views/userDates.ejs
+++ b/consulado_app_06/views/userDates.ejs
@@ -54,7 +54,7 @@
             </table>
             <div class="actualizar">
                 <p>Si hay algún cambio en los datos por favor comunicalo haciendo click en el enlace da abajo</p>
-                <a href="#">Actualización de datos</a>
+                <a href="/modificarDatos/<%= user.id_residente %>">Actualización de datos</a>
             </div>
         </section>
         <a href="#" class="volver"><i class="bi bi-arrow-left-circle-fill"></i>Volver</a>
