--- a/consulado_app_06/views/modiDates.ejs
+++ b/consulado_app_06/views/modiDates.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include('./parcials/head') %>
-        <link rel="stylesheet" href="/css/datos-usuario.css">
+        <link rel="stylesheet" href="/css/datos-mod-usuario.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         </div>
         <h2>Modificar Datos</h2>
         <section>
-            <div>
+            <div class="parrafo">
                 <p>Podras actualizar tu número de teléfono y enviar una petición para que modifiquemos tu nueva
                     dirección</p>
             </div>
@@ -28,10 +28,10 @@
                 <fieldset>
                     <legend>Modificar número teléfonico</legend>
                         <div>
-                            <label for=""></label>
-                            <input type="text">
+                            <label for="tel">Inserta tu nuevo número</label>
+                            <input type="text" name="tel" id="tel" placeholder="<%= user.telefono_res %>">
                         </div>
-                    
+                    <button type="submit">Modificar número</button>
                 </fieldset>
             </form>
             <form action="" method>
@@ -39,13 +39,17 @@
                     <p>Para poder actuar el cambio de dirección deberás adjuntar una copia de tu padrón municipal actualizado</p>
                     <legend>Enviar petición pra cambio de dirección</legend>
                     <div>
-                        <label for=""></label>
-                        <input type="text">
+                        <label class="city" for="ciudad">Inserta el nombre de tu nueva ciudad</label>
+                        <input type="text" name="ciudad" id="ciudad" placeholder="<%= user.ciudad_aire_res %>">
                     </div>
-                    <div>
-                        <label for=""></label>
-                        <input type="file">
-                    </div>
+                    <div class="container-input">
+                        <input type="file" name="file-1" id="file-1" class="inputfile inputfile-1" data-multiple-caption="{count} archivos seleccionados" multiple />
+                        <label for="file-1">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="iborrainputfile" width="20" height="17" viewBox="0 0 20 17"><path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"></path></svg>
+                        <span class="iborrainputfile">Seleccionar archivo</span>
+                        </label>
+                        </div>
+                    <button type="submit">Enviar</button>
                 </fieldset>
             </form>
         </section>
