--- a/consulado_app_07/views/modiDates.ejs
+++ b/consulado_app_07/views/modiDates.ejs
@@ -21,25 +21,28 @@
         <h2>Modificar Datos</h2>
         <section>
             <div class="parrafo">
-                <p>Podras actualizar tu número de teléfono y enviar una petición para que modifiquemos tu nueva
-                    dirección</p>
+                <p>Actualiza aquí tu número de teléfono.</p>
             </div>
             <form action="" method="post">
                 <fieldset>
                     <legend>Modificar número teléfonico</legend>
                         <div>
-                            <label for="tel">Inserta tu nuevo número</label>
+                            <label for="tel">Inserta tu número de teléfono</label>
                             <input type="text" name="tel" id="tel" placeholder="<%= user.telefono_res %>">
                         </div>
                     <button type="submit">Modificar número</button>
                 </fieldset>
             </form>
+            <div class="parrafo">
+                <p>Envía la solicituda para modificar tu dirección.</p>
+            </div>
             <form action="" method>
                 <fieldset>
-                    <p>Para poder actuar el cambio de dirección deberás adjuntar una copia de tu padrón municipal actualizado</p>
-                    <legend>Enviar petición pra cambio de dirección</legend>
+                    <p>Para poder actualizar tu dirección deberás adjuntar una copia de tu padrón municipal actualizado.</p>
+                    <legend>Enviar solicitud para cambio de dirección</legend>
                     <div>
-                        <label class="city" for="ciudad">Inserta el nombre de tu nueva ciudad</label>
+                        <input type="hidden" name="id_residente" value="<%= user.id_residente %>">
+                        <label class="city" for="ciudad">Inserta el nombre de tu ciudad actual</label>
                         <input type="text" name="ciudad" id="ciudad" placeholder="<%= user.ciudad_aire_res %>">
                     </div>
                     <div class="container-input">
@@ -49,7 +52,7 @@
                         <span class="iborrainputfile">Seleccionar archivo</span>
                         </label>
                         </div>
-                    <button type="submit">Enviar</button>
+                    <button type="submit">Enviar solicitud</button>
                 </fieldset>
             </form>
         </section>
