--- a/consulado_app_08/views/calendarioAuto.ejs
+++ b/consulado_app_08/views/calendarioAuto.ejs
@@ -29,7 +29,7 @@
                 <form class="horas" method="post" id="hourInputsContainer"></form>
             </section>
         </div>
-        <a href="#" class="volver"><i class="bi bi-arrow-left-circle-fill"></i>Volver</a>
+        <a href="/userPage" class="volver"><i class="bi bi-arrow-left-circle-fill"></i>Volver</a>
     </main>
     <%- include('./parcials/footer') %>
     <script src="/js/app_dia_hora.js"></script>
