--- a/consulado_app_08/views/userDates.ejs
+++ b/consulado_app_08/views/userDates.ejs
@@ -57,7 +57,7 @@
                 <a href="/modificarDatos">Actualización de datos</a>
             </div>
         </section>
-        <a href="#" class="volver"><i class="bi bi-arrow-left-circle-fill"></i>Volver</a>
+        <a href="/userPage" class="volver"><i class="bi bi-arrow-left-circle-fill"></i>Volver</a>
     </main>
 
     <%- include('./parcials/footer') %>
