--- a/consulado_app_08/views/userList.ejs
+++ b/consulado_app_08/views/userList.ejs
@@ -2,8 +2,7 @@
 <html lang="es">
 
 <head>
-    <%- include('./parcials/head') %>
-    <link rel="stylesheet" href="/css/styleAdmin.css">
+    <%- include('./parcials/headAdmin') %>
     <link rel="stylesheet" href="/css/main-back.css">
 </head>
 
